# praval

./: .bumpversion.cfg  .env  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.jupyter  MANIFEST.in  Makefile  README.md  RELEASE.md  docker-compose.yml  header.tex  praval-template.tex  praval.md  praval_short_manual.md  pyproject.toml  requirements.txt  test-docker-examples.sh  test_async_agents.py  test_message_filtering.py  validate_implementation.py
.github/workflows/: auto-version-bump.yml  auto-version-bump.yml.disabled  ci.yml  live-demos.yml  publish.yml
docker/: Dockerfile.secure  docker-compose.secure.yml
docker/jupyter/: jupyter_lab_config.py
docker/mosquitto/: mosquitto.conf
docker/postgres/: init.sql
docker/rabbitmq/: rabbitmq.conf
docker/scripts/: generate-certs.sh
docs/: CONTRIBUTING.md  DEPLOYMENT.md  README.md  agent-lifecycle.md  api-surface.toml  architecture-diagram.md  architecture.mmd  claude-code-prompt.md  feature-claims.toml  memory-api-reference.md  memory-system.md  phase1-specification.md  praval-complete-guide.md  praval-manual.md  quickstart.md  rabbitmq-queue-consumption.md  reef-communication-specification.md  secure_spores_architecture.md  tool-system-specification.md  v0.7.13-native-spore-amqp.md
docs/archive/: praval-book.md  praval-complete-manual.md  praval-short-manual.md
docs/notes/: api-structure-changes.md
docs/observability/: README.md  quickstart.md
docs/plans/: 2026-07-13-visual-notebook-course-design.md  2026-07-14-agent-team-showcase-capstones-design.md  2026-07-14-notebook-learning-experience-redesign.md  2026-07-18-praval-081-quality-release-design.md  2026-07-18-readme-changelog-learning-design.md
docs/releases/: RELEASE_NOTES_0.7.11.md  RELEASE_NOTES_0.7.22.md  RELEASE_NOTES_0.8.0.md  RELEASE_NOTES_0.8.1.md
docs/sphinx/: README.md  conf.py  index.rst  license.rst
examples/: 001_single_agent_identity.py  002_agent_communication.py  003_specialist_collaboration.py  004_registry_discovery.py  005_memory_enabled_agents.py  006_resilient_agents.py  007_adaptive_agent_systems.py  008_self_organizing_networks.py  009_emergent_collective_intelligence.py  010_unified_storage_demo.py  011_secure_spore_demo.py  012_tools_basic.py  013_tools_shared.py  014_tools_categories.py  015_hitl_tool_approval.py  016_hitl_mixed_agents.py  README_Examples.md  arxiv_paper_downloader.py  blog_multi_agent_demo.py  blog_tools_and_observability_demo.py  building_agents_tutorial.ipynb  calculator.py  configurable_embeddings.py  conversational_memory_agent.ipynb  deep_search.py  distributed_agents_bootstrap.py  distributed_agents_with_rabbitmq.py  gemini_multimodal_file.py  gemini_tool_runtime.py  knowledge_graph_miner.py  local_llm_openai_compatible.py  manifest.toml  memory_demo.py  model_runtime_fake_provider.py  multimodal_input_runtime.py  pythonic_knowledge_graph.py  rag_chatbot.py  request_based_voice_agent.py  secure_spore_demo.py  secure_venturelens.py  (+10 more)
examples/certification/: live_hitl.py  live_provider_matrix.py  live_voice_roundtrip.py  mcp_server.py  mcp_transports.py  offline_framework.py  services.py  support.py
examples/docker-examples/: README.md
examples/downloaded_papers/: metadata.json
examples/notebooks/: README.md  __init__.py  manifest.toml  support.py
examples/observability/: 000_quickstart.py  001_basic_tracing_demo.py  002_configuration_demo.py  003_context_propagation_demo.py  README.md
plans/: agno-praval-comparison.md  langgraph-praval-comparison.md  multimodal_support_plan.md  praval_model_runtime_rearchitecture.md  rearchitecture_plan_v2.md  scaling-praval.md  strands-praval-comparison.md
scripts/: __init__.py  build.sh  build_exact_wheel_docs.py  check_api_surface.py  check_coverage_floors.py  check_release_metadata.py  check_reproducible_build.sh  check_types.py  deploy-docs.sh  md2pdf.sh  normalize_sdist.py  run_demos.py  run_notebooks.py  simple_pdf.sh  smoke_install.py  stage_docs_artifact.py  validate_distribution.py  verify_demo_certification.py  verify_pypi_wheel.py  write_build_manifest.py
src/praval/: __init__.py  app.py  cli.py  composition.py  decorators.py  embeddings.py  model_runtime.py  tools.py
temp_plans/: observability_cloud_integration.md  observability_design_refinement.md  observability_implementation_approach.md  praval_eval_spec.md  praval_observability_plan.md
tests/: conftest.py  test_agent.py  test_agent_edges.py  test_agent_external_tools.py  test_agent_lifecycle.py  test_agent_logging.py  test_agent_reef_integration.py  test_agent_runner_edges.py  test_agent_runner_unit.py  test_agent_runtime_compatibility.py  test_agent_tool_integration.py  test_all_examples.py  test_anthropic_provider_edges.py  test_async_agents.py  test_broadcast_chaining.py  test_cli_diagnostics.py  test_cohere_provider_edges.py  test_collection_separation.py  test_composition.py  test_coverage_floors.py  test_decorator_edges.py  test_decorators.py  test_demo_certification.py  test_distributed_agent_startup.py  test_documentation_contracts.py  test_duplicate_agent_registration.py  test_embedded_store.py  test_embedded_store_edges.py  test_embedding_runtime.py  test_episodic_memory.py  test_gemini_provider_edges.py  test_hitl_agent.py  test_hitl_cli.py  test_hitl_provider_parity.py  test_hitl_runtime_edges.py  test_hitl_store.py  test_init_exports.py  test_integration.py  test_knowledge_base_benchmark.py  test_local_and_gemini_providers.py  (+42 more)
tests/integration/: test_rabbitmq_distributed_workflow.py
tests/mcp/: contract_server.py  test_client.py  test_contracts.py  test_provider_parity.py
tests/observability/: __init__.py  test_config.py  test_context.py  test_exporters.py  test_instrumentation.py  test_instrumentation_manager.py  test_span.py  test_sqlite_store.py  test_tracer.py
tests/storage/: __init__.py  conftest.py  test_base_provider.py  test_data_manager.py  test_filesystem_provider.py  test_memory_integration.py  test_optional_providers.py  test_postgresql_provider.py  test_qdrant_provider.py  (+4 more)
(+152 files in other folders)
