[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "praval"
version = "0.6.2"
description = "A composable Python framework for LLM-based agents inspired by coral ecosystems"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Praval Team"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.9"
dependencies = [
    "openai>=1.0.0",
    "anthropic>=0.8.0",
    "cohere>=4.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    "scikit-learn>=1.3.0",  # For cosine similarity and other ML utilities
    "python-dotenv>=1.0.0",  # For .env file loading
    "aio-pika>=9.0.0",  # Async AMQP client (RabbitMQ, etc.)
    "asyncio-mqtt>=0.16.0",  # Async MQTT client
    "aiostomp>=1.6.0",  # Async STOMP client
    "PyNaCl>=1.5.0",  # Modern cryptography (Ed25519, Curve25519)
    "msgpack>=1.0.0",  # Efficient binary serialization
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.package-data]
"*" = ["*.png", "*.jpg", "*.jpeg", "*.gif"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
# Temporarily disabled to run coverage manually
# addopts = [
#     "--cov=src/praval",
#     "--cov-report=term-missing",
#     "--cov-report=html",
#     "--cov-fail-under=80",
#     "--strict-markers"
# ]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.coverage.run]
source = ["src/praval"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:"
]
show_missing = true
skip_covered = false
fail_under = 80

[tool.coverage.html]
directory = "htmlcov"