[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "praval"
version = "0.7.17"
description = "A composable Python framework for LLM-based agents inspired by coral ecosystems"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Praval Team"},
]
keywords = [
    "ai", "agents", "llm", "multi-agent", "framework",
    "openai", "anthropic", "cohere", "rag", "memory",
    "vector-database", "chromadb", "qdrant", "chatbot",
    "knowledge-graph", "semantic-search", "nlp"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.9"
dependencies = [
    # Core LLM providers (choose at least one via API key)
    "openai>=1.0.0",
    "anthropic>=0.8.0",
    "cohere>=4.0.0",
    # Configuration and validation
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/aiexplorations/praval"
Documentation = "https://github.com/aiexplorations/praval/tree/main/docs"
Repository = "https://github.com/aiexplorations/praval"
"Bug Tracker" = "https://github.com/aiexplorations/praval/issues"
Changelog = "https://github.com/aiexplorations/praval/blob/main/CHANGELOG.md"

[project.optional-dependencies]
# Memory system with vector storage and embeddings
memory = [
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    "scikit-learn>=1.3.0",
]

# Secure Spores - Enterprise messaging and encryption
secure = [
    "aio-pika>=9.0.0",         # AMQP/RabbitMQ
    "asyncio-mqtt>=0.16.0",    # MQTT
    "aiostomp>=1.6.0",         # STOMP
    "PyNaCl>=1.5.0",           # Cryptography
    "msgpack>=1.0.0",          # Serialization
]

# PDF knowledge base support
pdf = [
    "PyPDF2>=3.0.0",
]

# Storage providers (for advanced data persistence)
storage = [
    "psycopg2-binary>=2.9.0",  # PostgreSQL
    "redis>=4.5.0",            # Redis
    "boto3>=1.26.0",           # AWS S3
    "qdrant-client>=1.6.0",    # Qdrant vector DB
]

# Documentation generation
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=2.0.0",          # ReadTheDocs theme
    "sphinx-autodoc-typehints>=1.24.0", # Better type hints rendering
    "myst-parser>=2.0.0",               # Markdown support in Sphinx
    "sphinx-copybutton>=0.5.2",         # Copy code button
    "sphinx-design>=0.5.0",             # Cards, tabs, grids
]

# All optional features combined
all = [
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    "scikit-learn>=1.3.0",
    "aio-pika>=9.0.0",
    "asyncio-mqtt>=0.16.0",
    "aiostomp>=1.6.0",
    "PyNaCl>=1.5.0",
    "msgpack>=1.0.0",
    "PyPDF2>=3.0.0",
    "psycopg2-binary>=2.9.0",
    "redis>=4.5.0",
    "boto3>=1.26.0",
    "qdrant-client>=1.6.0",
]

# Development dependencies
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    # Storage provider testing
    "testcontainers[postgres,redis,qdrant]>=4.0.0",
    "moto[s3]>=5.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.package-data]
"*" = ["*.png", "*.jpg", "*.jpeg", "*.gif"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
markers = [
    "unit: Unit tests",
    "integration: Integration tests requiring external services",
    "performance: Performance and load tests", 
    "edge_case: Edge case and boundary condition tests",
    "knowledge_base: Tests related to knowledge base and PDF functionality"
]
# Temporarily disabled to run coverage manually
# addopts = [
#     "--cov=src/praval",
#     "--cov-report=term-missing",
#     "--cov-report=html",
#     "--cov-fail-under=80",
#     "--strict-markers"
# ]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.coverage.run]
source = ["src/praval"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:"
]
show_missing = true
skip_covered = false
fail_under = 80

[tool.coverage.html]
directory = "htmlcov"